<resources>
    <string name="app_name">Expense</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_hint">demo@gmail.com</string>
    <string name="password_hint">*********</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>

    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="username_hint">Masum Ahmed</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_account_message">Already have an account? </string>
    <string name="dont_have_account">Do not Have an Account? </string>


</resources>