<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.SignupActivity"
    android:background="@color/bacgroundk"

    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="14dp"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_up"
                android:textColor="@color/black"

                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"



                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:drawableLeft="@drawable/ic_mail"
                android:background="@drawable/edittext_background"
                android:hint="@string/username_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"



                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:drawableLeft="@drawable/ic_mail"
                android:background="@drawable/edittext_background"
                android:hint="@string/email_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"



                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"



                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:textSize="20dp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/montserrat"
                />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account_message"
            android:textSize="18dp"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"

            />

    </LinearLayout>


</RelativeLayout>
